external-crates/move/crates/move-compiler/tests/move_2024/parser/ability_modifier_postfix_no_abilities_no_semi.exp
error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/ability_modifier_postfix_no_abilities_no_semi.move:5:1
  │
5 │ }
  │ ^ Unexpected '}'. Expected a type ability, one of: 'copy', 'drop', 'store', or 'key'

